<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:text="@string/t_inputname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_point"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/row_sort"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:text=""
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/row_chb_control"
        android:layout_alignBottom="@+id/row_chb_control" />

    <CheckedTextView
        android:text="@string/t_lat"
        android:checkMark="@drawable/pict_false"
        android:checked="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_point"
        android:id="@+id/row_latitude" />

    <CheckedTextView
        android:text="@string/t_long"
        android:checkMark="@drawable/pict_false"
        android:checked="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/row_longitude"
        android:layout_below="@+id/name_point"
        android:layout_toRightOf="@id/row_latitude"/>

    <TextView
        android:id="@+id/row_distance"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/row_chb_control"
        android:layout_alignBottom="@+id/row_chb_control"
        android:layout_toLeftOf="@+id/row_chb_control"
        android:layout_toStartOf="@+id/row_chb_control" />

    <CheckBox
        android:text=""
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/row_chb_control"
        android:layout_alignBaseline="@+id/row_latitude"
        android:layout_alignBottom="@+id/row_latitude"
        android:layout_toLeftOf="@id/row_sort"
        android:layout_marginRight="20dp"/>

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSelect"
        android:id="@+id/textView2"
        android:layout_below="@+id/row_sort"/>

</RelativeLayout>